tests/invalid_lex/lex13.java
class Main {
    static int i = 5.5.5;
}
